--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="jquery-ui.min.css">
 	</head>
 	<body style="height: 100px;width: 200px">
-		<div id="slider">
+		<div id="slider" style="width: 180px;left:10px">
 			<a href="#"></a>
 		</div>
 		<p>
