--- a/popup.html
+++ b/popup.html
@@ -7,15 +7,10 @@
 		
 		<link rel="stylesheet" href="jquery-ui.min.css">
 	</head>
-	<body style="height: 100px;width: 200px">
+	<body style="width: 200px">
 		<div id="slider" style="width: 180px;left:10px">
 			<a href="#"></a>
 		</div>
-		<p>
-			<label for="number"></label>
-			<input type="number" id="number" min="0" max="3" value="0">
-		</p>
-		<button id="set">Set options</button>
 
 	</body>
 	
